# xload-agent

./: LICENSE  README.md  config.example.yaml  main.py  pyproject.toml
src/: agent.py
src/xload_agent/: __init__.py
src/xload_agent/agents/: fs_agent.py  k6_agent.py  terminal_agent.py
src/xload_agent/config/: __init__.py  config.py
src/xload_agent/prompts/templates/: fs_agent.md  k6_agent.md  root_agent.md  terminal_agent.md
src/xload_agent/tools/: README.md  __init__.py
src/xload_agent/tools/fs/: grep.py  ls.py  mcp.py  tree.py
src/xload_agent/tools/k6/: run.py  test_script.js
src/xload_agent/tools/terminal/: bash.py  bash_terminal.py
src/xload_agent/webui/: package.json
src/xload_agent/webui/src/app/: layout.tsx  page.tsx
src/xload_agent/webui/src/app/api/copilotkit/: route.ts
